<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AutoMotoMaintenance</string>
    <string name="start">start</string>
    <string name="brand">brand</string>
    <string name="number">number</string>
    <string name="year">year</string>
    <string name="volume">volume</string>
    <string name="logout">logout</string>
    <string name="add_vehicle">ADD Transport</string>
    <string name="add_company">ADD company</string>
    <string name="auto">Auto</string>
    <string name="moto">Moto</string>
    <string name="auto_">AUTO:</string>
    <string name="company_">COMPANY:</string>
    <string name="moto_">MOTO:</string>
    <string name="email">email</string>
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="auto_amp_moto"><![CDATA[Auto & Moto]]></string>
    <string name="maintenance">Maintenance</string>
    <string name="list">list</string>
    <string name="company">company</string>
    <string name="search">search</string>
    <string name="info">info</string>
    <string name="add_menu">add</string>
    <string name="add_car">add car</string>
    <string name="add_bike">add motorbike</string>
    <string name="password">password</string>
    <string name="back">back</string>
    <string name="km">km</string>
    <string name="km_km">%1$s km</string>
    <string name="choose_date">choose date</string>
    <string name="type_of_services">type of services</string>
    <string name="cost">cost</string>
    <string name="add_car_maintenance">add car \n maintenance</string>
    <string name="add_bike_maintenance">add bike \n maintenance</string>
    <string name="date">date</string>
    <string name="text_km">km</string>
    <string name="delete">Delete</string>
    <string name="add_info">Add info</string>
    <string name="show">SHOW</string>
    <string name="edit">edit</string>
    <string name="name_company">name company</string>
    <string name="name_services">name services</string>
    <string name="information">Information:</string>
    <string name="phone">phone</string>
    <string name="contact">contact</string>
    <string name="address">address</string>
    <string name="delete_">delete?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="comma">%1$s ,</string>
    <string name="cc">%1$s cc</string>
    <string name="person">person</string>
    <string name="not_empty">"NOT BE EMPTY"</string>
    <string name="call_denied">"CALL DENIED"</string>
    <string name="not_empty_add_transport">"CAN'T BE EMPTY: BRAND, NUMBER, YEAR"</string>
    <string name="not_empty_service">"CAN'T BE EMPTY: KM, SERVICE"</string>
    <string name="km_number">"'km' must be NUMBER"</string>
    <string name="should_not_empty">"Shouldn't be empty"</string>

</resources>