<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_text"
    android:orientation="vertical"
    android:padding="@dimen/dp10"
    android:layout_margin="@dimen/dp16">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/name_company"
        android:textColor="@color/black"
        android:textSize="@dimen/sp32" />

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/information"
        android:textColor="@color/black"
        android:textSize="@dimen/sp24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="15">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textSize="@dimen/sp24" />

        <TextView
            android:id="@+id/human"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_weight="4"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/person"
            android:paddingBottom="@dimen/dp10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp24" />
    </LinearLayout>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/address"
        android:textColor="@color/black"
        android:textSize="@dimen/sp24" />

    <View
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/separator" />

</LinearLayout>