<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_navigation"
    android:paddingBottom="@dimen/dp24">

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp16"
        android:gravity="center"
        android:text="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_text"
        android:text="@string/show"
        app:layout_constraintEnd_toStartOf="@id/add_info"
        app:layout_constraintStart_toEndOf="@id/delete"
        app:layout_constraintTop_toBottomOf="@id/number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_text"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@+id/show"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_text"
        android:text="@string/add_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/show"
        app:layout_constraintTop_toBottomOf="@id/number" />
</androidx.constraintlayout.widget.ConstraintLayout>