<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_second">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp35"
            android:layout_marginTop="@dimen/dp100"
            android:layout_marginEnd="@dimen/dp35"
            android:hint="@string/km"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_add_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/choose_date"
                android:background="@drawable/bg_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp35"
                android:layout_marginTop="@dimen/dp24"
                android:hint="@string/choose_date"
                app:endIconMode="clear_text"/>

            <TextView
                android:id="@+id/data"
                android:background="@drawable/bg_add_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginTop="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp35"
                android:hint="@string/date"
                android:textColor="@color/black"
                app:endIconMode="clear_text"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp35"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginEnd="@dimen/dp35"
            android:hint="@string/type_of_services"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_add_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp35"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginEnd="@dimen/dp35"
            android:hint="@string/cost"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_add_text"
                android:drawableEnd="@drawable/ic_dollar_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp32"
            android:background="@drawable/bg_button_back_add"
            android:drawableStart="@drawable/ic_back"
            android:fontFamily="@font/ubuntu_regular"
            android:padding="@dimen/dp16"
            android:text="@string/back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addInfo"
            style="@style/bg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp130"
            android:layout_marginBottom="@dimen/dp50"
            android:background="@drawable/bg_add"
            android:paddingStart="@dimen/dp40"
            android:paddingEnd="@dimen/dp40"
            android:text="@string/add_car_maintenance"
            />
    </LinearLayout>
</ScrollView>