<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_text">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dp16"
            android:text="@string/name_services" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/name_services"
            android:textColor="@color/black"
            android:textSize="@dimen/sp32" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/km"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/km"
            android:textColor="@color/black"
            android:textSize="@dimen/sp24" />
        <View
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/separator"
            tools:ignore="MissingConstraints" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp24">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_text"
                android:text="@string/no" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/bg_button_text"
                android:text="@string/yes" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>